Add X11 support for ATK key event listeners

ATK requires us to allow it to filter all key events. Add an AtkUtil
mechanism to filter key events.

Bug: 866334
Change-Id: I42383479ab78242325bda0714afb60b7dcf2fe65
Reviewed-on: https://chromium-review.googlesource.com/c/1319709
Commit-Queue: Martin Robinson <mrobinson@igalia.com>
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607989}
Former-commit-id: b26b9d891ad497c3928e9b7c04567100efe9bbdd